--- a/Slides.qmd
+++ b/Slides.qmd
@@ -254,15 +254,19 @@ x %>% mean() %>% round(2) %>% sum(5)
 
 #
 
-A função select() permite selecionar colunas nomeando-as e separando-as por vírgula ou não. Veremos exemplos abaixo.
+A função **select()** permite selecionar colunas nomeando-as e separando-as por vírgula ou não. Veremos exemplos abaixo.
 
-```{r eval=FALSE}
-dados_Carbon %>%
-  dplyr::select(Plant, Treatment) %>% 
-  utils::head(3)
-
+```{r}
 dados_Carbon %>% 
   dplyr::select(1,3) %>% 
+  utils::head(3)
+```
+
+Veja que com o código abaixo a saída é a mesma:
+
+```{r eval = FALSE}
+dados_Carbon %>%
+  dplyr::select(Plant, Treatment) %>% 
   utils::head(3)
 ```
 
@@ -281,11 +285,12 @@ dados_Carbon %>%
 
 Exisem funções no `dplyr` que ajudam na seleção das variáveis de uma outra forma:
 
-- `starts_with()`: colunas que começam com um prefixo
-- `ends_with()`: colunas que terminam com um sufixo
-- `contains()`: colunas que contêm uma string
-- `last_col()`: última coluna
+- starts_with(): colunas que começam com um prefixo
+- ends_with(): colunas que terminam com um sufixo
+- contains(): colunas que contêm uma string
+- last_col(): última coluna
 
+#
 
 ```{r}
 dados_Carbon %>% 
@@ -293,14 +298,14 @@ dados_Carbon %>%
   utils::head(3)
 ```
 
----
-
-
+#
 
 Esta função nos permite retirar colunas da base da seguinte forma:
 
 ```{r}
-iris %>% select(-Species)
+dados_Carbon %>% 
+  dplyr::select(-Treatment) %>% 
+  utils::head(3)
 ```
 
 
@@ -308,8 +313,43 @@ iris %>% select(-Species)
 
 #
 
-```{r}
+Já a função **filter()** permite subdividir observações com base em seus valores. O primeiro argumento é o nome do quadro de dados. O segundo argumento e os subsequentes são as expressões que filtram o quadro de dados.
 
+```{r include=FALSE}
+dados_Carbon %>% 
+  dplyr::filter(Treatment == "nonchilled") %>% 
+  utils::head(3)
+```
+
+Quando você executa essa linha de código, o pacote `dplyr` executa a operação de filtragem e retorna um novo quadro de dados.
+
+```{r}
+dplyr::filter(dados_Carbon, Treatment == "nonchilled") %>% 
+  utils::head(3)
+```
+
+#
+
+Você pode também utilizar essa função de forma eficaz, você precisa saber como selecionar as observações desejadas usando os operadores de comparação. O R fornece o conjunto padrão: >, >=, <, <=, != (diferente) e == (igual).
+
+```{r}
+dplyr::filter(dados_Carbon, conc <= 95) %>% 
+  utils::head(3)
+```
+#
+
+Vários argumentos do **filter()** são combinados com **“e”**: cada expressão deve ser verdadeira para que uma linha seja incluída na saída. Para outros tipos de combinações, você mesmo precisará usar operadores booleanos: & é “e”, | é “ou” e ! é “não”. A Figura abaixo mostra o conjunto completo de operações booleanas.
+
+![](img/boolenaos.jpeg)
+
+#
+
+No exemplo a seguir utilizamos o operador **<=** (menor igual) e o **&**:
+
+```{r}
+dados_Carbon %>% 
+  dplyr::filter(conc <= 95 & Treatment == "nonchilled") %>% 
+  utils::head(3)
 ```
 
 # mutate()
