--- a/Slides.qmd
+++ b/Slides.qmd
@@ -431,7 +431,8 @@ Se você quiser apenas manter as novas variáveis, use a função **transmute()*
 ```{r}
 exemplo_transmute <- dados_Carbon %>% 
                        dplyr::transmute(soma_numeric = conc + uptake,
-                                     plant_trat = stringr::str_c(Plant, Treatment, sep = "-"))
+                                     plant_trat = stringr::str_c(Plant, Treatment, sep = "-")) %>% 
+                       utils::head(3)
 ```
 
 # arrange()
@@ -478,33 +479,52 @@ dados_Carbon %>%
 
 #
 
-Temos a função *group_by()* que irá agrupar o banco de dados em relação a uma variável ou mais de uma.
+Temos a função **group_by()** que irá agrupar o banco de dados em relação a uma variável (ou mais de uma).
 
 ```{r}
-
+dados_Carbon %>% 
+  dplyr::group_by(Treatment) 
 ```
+
+# {background-color="black"}
+
+Quando dados agrupados são passados para uma métrica com reconhecimento de grupo, eles retornarão valores de métrica calculados para cada grupo. 
+
+![](img/group.jpeg)
+
+#
+
+Logo, se temos 2 tratamentos, e se quiséssemos calcular a média de cada grupo em relação a variável **conc**, precisaríamos que os dados estivessem agrupados de acordo com o tratamento.
+
+::: fragment
+**A função group_by() é comumente utilizada com a função summarise() que vem logo a seguir**
+:::
 
 # summarise()
 
 #
 
-O último verbo chave é summarise(). Ele recolhe um quadro de dados em uma única linha:
+O último verbo chave é o **summarise()**. Ele recolhe um quadro de dados em uma única linha.
 
-```{r}
+A função **summarise()** não é muito útil, a menos que o combinemos com **group_by()**. Isso altera a unidade de análise do conjunto de dados completo para grupos individuais. Então, quando você usar as funções `dplyr` em um quadro de dados agrupado, eles serão aplicados automaticamente “por grupo”.
 
-```
+# 
 
-#
-
-A função **summarise()** não é muito útil, a menos que o combinemos com **group_by()**. Isso altera a unidade de análise do conjunto de dados completo para grupos individuais. Então, quando você usar as funções `dplyr` em um quadro de dados agrupado, eles serão aplicados automaticamente “por grupo”. Por exemplo, se aplicarmos exatamente o mesmo código a um quadro de dados agrupado por data, obteremos o atraso médio por data:
-
-```{r}
-
-```
+![](img/summarize-a-variable-in-R.png)
 
 #
 
-Juntos **group_by()** e **summarise()** fornecem uma das ferramentas que você usará mais comumente ao trabalhar com `dplyr`: resumos agrupados.
+Por exemplo, se aplicarmos exatamente o mesmo código a um quadro de dados agrupado por tratamento, obteremos o valor de **uptake** médio por tratamento:
+
+```{r}
+dados_Carbon %>% 
+  dplyr::group_by(Treatment) %>% 
+  dplyr::summarise(media_trat = base::mean(uptake, na.rm = TRUE),
+                   n_plantas = dplyr::n())
+```
+::: fragment
+**Juntos group_by() e summarise() fornecem uma das ferramentas que você usará mais comumente ao trabalhar com `dplyr`: resumos agrupados.**
+:::
 
 # case_when()
 
