--- a/Slides.qmd
+++ b/Slides.qmd
@@ -602,14 +602,309 @@ esquisse::esquisser(viewer = "browser")
 #  {background-image="img/teste_hipo.png"}
 
 #
-[**A parte final de uma análise estatı́stica, o teste de hipotese (T.H.), se dá pela tomada de decisão relativa a um problema de interesse, digamos, verificar se há associação entre um fator (adubo) e o tamanho de uma planta (mangueira) na experimentação agronômica.**]{.underline}
+**A parte final de uma análise estatı́stica, o teste de hipotese (T.H.), se dá pela tomada de decisão relativa a um problema de interesse, digamos, verificar se há associação entre um fator (adubo) e o tamanho de uma planta (mangueira) na experimentação agronômica.**
 
 # 
 
--   Na prática experimental é comum o surgimento de situações em que não se tem o conhecimento da distribuição dos dados, ou mesmo que o tenha, os mesmos podem não ter a distribuição normal. A alta dispersão ou até mesmo assimetria, ou ambos, fazem com que o trato com os dados seja dificultado.
+Na prática experimental é comum o surgimento de situações em que não se tem o conhecimento da distribuição dos dados, ou mesmo que o tenha, os mesmos podem não ter a distribuição normal. A alta dispersão ou até mesmo assimetria, ou ambos, fazem com que o trato com os dados seja dificultado.
 
+::: {.notes}
 -   **Muitos casos destes existem técnicas de transformações nos dados que produzem novos dados cuja distribuição se aproxime da normal**. Caso isto não seja possı́vel as técnicas não-paramétricas são uma alternativa para análise estatı́stica.
+:::
+
+# Paramétricos
+
+Há três principais tipos de testes t: o teste t para uma amostra, o teste t para duas amostras independentes (ou apenas teste t independente) e o teste t para duas amostras pareadas (ou teste t pareado). O teste t é um teste que verifica se há **diferença média** entre as amostras.
+
+::: fragment
+E se você tiver mais de duas amostras ou grupos?
+:::
 
 # 
+
+A resposta mais inocente seria realizar múltiplos testes t entre os diversos grupos e comparar o tamanho de efeito e p-valor dos testes. Porém essa abordagem possui uma falha: conforme aumenta o número de testes a taxa de falsos positivos (erros tipo I) aumentam quase na mesma proporção. **Esse erro ocorre quando rejeitamos a hipótese nula quando de fato ela é verdadeira.** 
+
+![](img/hipoteses_allison.png)
+
+::: footer
+Arte por [Allison Horst](https://mobile.twitter.com/allison_horst)
+:::
+
+# 
+
+Para comparação entre mais de duas amostras ou grupos, temos um conjunto de técnicas chamada análise de variância, conhecida como **Analysis of Variance (ANOVA)**.
+
+A ANOVA controla esses erros para que os falsos positivos (erros tipo I) permaneçam em 5% na comparação de média entre dois ou mais grupos. **A ANOVA não irá dizer com precisão como que as médias dos grupos diferem**, mas o seu resultado indica fortes evidências de que a diferença entre as médias dos grupos difere. Sua hipótese nula é que não há diferença entre as médias dos grupos.
+
+<!-- A ANOVA tradicional é uma técnica paramétrica (quando a variável dependente é distribuída conforme uma distribuição Normal), mas há também uma versão não-paramétrica (quando não temos pressupostos sobre de que distribuição probabilística a variável dependente é distribuída) chamada teste de Kruskal-Wallis. -->
+
+<!-- Após analisar os resultados de uma ANOVA, é muito comum realizar uma comparação post-hoc usando um conjunto de técnicas comparativas de média entre grupos que controlam a taxa de erro familiar. A principal técnica paramétrica é o teste de Tukey e a principal técnica não-paramétrica é o teste de Dunn. -->
+
+# Vamos de exemplo?
+
+# 
+
+Nós vimos que há uma suposição entre a média do tamanho da Sepal.Length de cada Species do banco de dados **iris**. Sendo assim, vamos levantar a seguinte hipótese entre as Species setosa e virginica:
+
+- $H_{0}$ : Há uma diferença média entre as Species setosa e virginica em relação ao tamanho da Sepal.Length
+
+::: fragment
+E se você não sabe, há passos **obrigatórios** para a construção de um teste de hipótese. Vamos ver como é que funciona?
+:::
+
+# 
+
+::: fragment
+1. Enunciar as Hipóteses: Por exemplo:
+
+-   $H_{0}$ : Não há diferença médias entre os grupos A e B;
+-   $H_{1}$ : Há diferença média entre os grupos A e B;
+
+:::
+
+::: fragment
+2. Fixar o nı́vel de significância $\alpha$ do teste:
+
+ $\alpha$ : Erro tipo I: Rejeitar $H_{0}$ quando é verdadeira.
+:::
+
+::: fragment
+3. Escolha da Estatı́stica teste adequada:
+
+A Estatística de teste vai depender da característica dos seus dados, mas no nosso caso, vamos utilizar o teste t independente.
+
+:::
+
+#
+
+::: fragment
+4.  Obtenção dos valores crı́ticos e Obtenção da Estatı́stica calculada:
+
+Encontramos esses valores na saída do teste.
+
+:::
+
+::: fragment
+5.  Conclusão e tomada de decisão.
+:::
+
+## Pressupostos
+
+- Normalidade: verificamos a normalidade da variável dependente de cada grupo;
+- Homogeneidade de variâncias (ou seja, grupos com variâncias homogêneas).
+
+::: fragment
+**Para cada um dos testes, nós temos que seguir os 5 passos para a construção do teste de hipótese.**
+:::
+
+## Normalidade
+
+Para verificar a normalidade dos dados, é recomendável utilizar o teste de **Shapiro WIlk** quando o número de amostra é menor que 50. A estatı́stica T é basicamente o quadrado de um coeficiente de correlação, onde o coeficiente de correlação de Pearson é calculado entre a estatı́stica ordenada X i na amostra e o escore ai , que representa o que a estatı́stica ordenada deveria parecer se a população é Normal. Portanto, as hipóteses levantadas são:
+
+- $H_{0}$ : F(x) é função de distribuição normal;
+- $H_{1}$ : F(x) não é função de distribuição normal;
+
+#
+
+Iremos utilizar o nível de 95% de significância.
+
+A estatística de teste já foi mencionado acima, mas vale frizar que vamos utilizar o teste de **Shapiro WIlk** .
+
+```{r}
+#| message: false
+#| warning: false
+
+library(rstatix)
+
+teste_shapiro <- dados_iris %>% 
+                  dplyr::filter(Species != "versicolor") %>% 
+                  dplyr::group_by(Species) %>% 
+                  rstatix::shapiro_test(Sepal.Length)
+
+knitr::kable(teste_shapiro)
+```
+
+#
+
+Veja que de acordo com o teste de Shapiro Wilk, ao nível de 95% de significância, **não rejeita-se a hipótese nula**, ou seja, a variável **Sepal.Length** é descrita por uma distribuição normal.
+
+## Homogeneidade de variâncias
+
+O segundo pressuposto pode ser avaliado através do  **teste de Levene**, em que as hipóteses são:
+
+- $H_{0}$ : Os grupos apresentam variâncias homogêneas;
+- $H_{1}$ : Os grupos não apresentam variâncias homogêneas;
+
+Vamos considerar o nível de 95% de significância.
+
+#
+
+```{r}
+#| warning: false
+#| message: false
+
+library(car)
+teste_levene <- dados_iris %>% 
+                  dplyr::filter(Species != "versicolor") %>% 
+                  dplyr::group_by(Species) 
+
+teste_levene_Resultado <- car::leveneTest(Sepal.Length ~ Species,
+                                          data = teste_levene, 
+                                          center = mean)
+knitr::kable(teste_levene_Resultado)
+```
+
+#
+
+Logo, ao nível de 95% de significância, **rejeitamos a hipótese nula** (p-value = 0.0003), ou seja, os grupos apresentam não variâncias homogêneas e assim não podemos seguir com o teste t independente.
+
+::: fragment
+**Violamos o pressuposto de variâncias homogêneas, e agora?**
+:::
+
+::: fragment
+Nós poderemos seguir com o teste-t, mas deveremos usar um teste-t com correção para essa violação da homogeneidade, a **correção de Welch**.
+:::
+
+# Partiu teste, Fê?
+
+# ...se liga só no teste e em suas miniciosidades.
+
+#
+
+Como violamos o teste de homogeinidade de variâncias, vamos programar com **var.equal=FALSE**, mas uma vez que o pressuposto da homogeneidade de variâncias foi atendido, colocaremos **var.equal=TRUE**.
+
+::: fragment
+```{r}
+#| message: false
+#| warning: false
+
+stats::t.test(Sepal.Length ~ Species,
+              data = teste_levene,
+              var.equal = FALSE)
+```
+
+:::
+
+#
+
+Qual é a interpretação dessa saída?
+
+::: fragment
+**Ao nível de 95% de significância, nós rejeitamos a $H_{0}$ e assim há diferença média entre as Species e o tamanho da Sepal.Length.**
+:::
+
+::: fragment
+Se o nosso interesse for comparar os três tipos de Species, devemos utilizar a ANOVA e, para um melhor entendimento da diferença, utilizariamos o teste de Tukey para apontar quais grupos são diferentes entre si.
+:::
+
+#
+
+Mas antes de tudo...
+
+# Teste t
+
+## paired = TRUE
+
+Em algumas situações o par de amostras é constituı́do do mesmo indivı́duo em duas ocasiões diferentes. Essa ocasiação nós denominamos por **pareamento**, em que neste pareamento podemos distingui-lo em três tipos: auto-pareamento, pareamento natural e pareamento artificial.
+
+#
+
+- O auto-pareamento ocorre quando o indivı́duo serve como seu próprio controle, como na situação
+em que um indivı́duo recebe duas drogas administradas em ocasiões diferentes. Outra situação é
+a que um tratamento é administrado e as variáveis de interesse são observadas antes e depois do
+programa. Finalmente, a comparação de dois órgãos no mesmo indivı́duo, como braços, pernas,
+olhos, narinas, segundo alguma caracterı́stica estudada também constitui um auto-pareamento.
+
+#
+
+- O pareamento natural consiste em formar pares tão homogêneos quanto possı́vel, controlando
+os fatores que possam interferir na resposta, sendo que o pareamento aparece de forma natural. Por
+exemplo, em experimentos de laboratório pode-se formar pares de cobaias selecionadas da mesma
+ninhada; em investigações clı́nicas, gêmeos univitelinos são muito usados.
+
+- No pareamento artificial escolhe-se indivı́duos com caracterı́sticas semelhantes, tais como, idade,
+sexo, nı́vel sócio-econômico, estado de saúde ou, em geral, fatores que podem influenciar de maneira
+relevante a variável resposta.
+
+#
+
+```r
+t.test(x, ...)
+
+## Default S3 method:
+t.test(x, y = NULL,
+       alternative = c("two.sided", "less", "greater"),
+       mu = 0,
+       **paired = FALSE**,
+       var.equal = FALSE,
+       conf.level = 0.95, ...)
+
+## S3 method for class 'formula'
+t.test(formula, data, subset, na.action, ...)
+```
+
+## alternative = c("two.sided", "less", "greater")
+
+A hipótese alternativa mais comum - e a mais recomendada, salvo raras exceções - é a de que há uma diferença entre os grupos. Observe que aqui estamos estabelecendo apenas que, caso os grupos não sejam iguais, eles serão diferentes. Não estamos nos comprometendo com o sentido dessa diferença, se o grupo A terá uma média superior ou inferior à do grupo B. No entanto, é possível construirmos hipóteses alternativas que estabeleçam o sentido dessa diferença:
+
+#
+
+- $H_{1}$ : média do grupo A > média do grupo B
+- $H_{1}$ : média do grupo A < média do grupo B
+
+
+![](img/bilateral.png)
+
+::: footer
+Arte por [Allison Horst](https://mobile.twitter.com/allison_horst)
+:::
+
+#
+
+```r
+t.test(x, ...)
+
+## Default S3 method:
+t.test(x, y = NULL,
+       **alternative = c("two.sided", "less", "greater")**,
+       mu = 0,
+       paired = FALSE,
+       var.equal = FALSE,
+       conf.level = 0.95, ...)
+
+## S3 method for class 'formula'
+t.test(formula, data, subset, na.action, ...)
+```
+
+# ANOVA
+
+# ... bem rapidinho, pode ser?
+
+#
+
+::: fragment
+```{r}
+anova <- stats::aov(Sepal.Length ~ Species, dados_iris)
+summary(anova)
+```
+:::
+
+::: fragment
+Qual é a interpretação desse teste?
+:::
+
+#
+
+::: fragment
+```{r}
+stats::TukeyHSD(anova)
+```
+:::
+
+::: fragment
+Onde há diferença?
+:::
+
 
 # K-Means
