--- a/Slides.qmd
+++ b/Slides.qmd
@@ -979,3 +979,30 @@ Onde há diferença?
 
 
 # K-Means
+
+Tá aí um algoritmo muito falado na área de ciência de dados e, apesar de estar na 'boca do povo' há uns 5 anos, seus princípios são bem mais velhos do que isso. 
+
+O K-Means é um algoritmo de aprendizagem não supervisionada. Ele não classifica, mas agrupa vetores de atributos similares, isto é, coloca em um mesmo agrupamento vetores similares, e por este ser computacionalmente simples e funcionar bem na prática, ele é um dos principais e mais usados métodos de agrupamento (DUDA; HART, 1973).  
+
+Só no Google Acadêmico com a pesquisa "K-means" há mais de 8 mil artigos publicados. São artigos com aplicação em diversas áreas e claro que muitos são artigos 'palpiteros' que indicam algum tipo de alteração no desenrolar do algoritmo. 
+
+#
+
+
+```{r}
+library(ggplot2)
+ggplot(dados_iris, aes(Petal.Length, Petal.Width)) + 
+  geom_point(aes(col=Species), size=4)
+```
+
+
+
+# Muita informação, né?
+
+# ... chegamos ao fim!
+
+#
+
+Todo o material vocês encontram [aqui](https://github.com/FernandaKelly) e, se tiverem dúvidas, podem entrar em contato comigo através do meu [site](https://www.fernandakellyrs.com/) ou [linkedin](https://www.linkedin.com/in/fernandakellyrs/).
+
+
